@@ -1,1 +1,2 @@
 # xujb_tomcat_s
+-Dcatalina.home=apache-tomcat-7.0.63 -Dcatalina.base=apache-tomcat-7.0.63 -Djava.endorsed.dirs=apache-tomcat-7.0.63/endorsed -Djava.io.tmpdir=apache-tomcat-7.0.63/temp -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djava.util.logging.config.file=apache-tomcat-7.0.63/conf/logging.properties
